18.08.2001	pl translation <garetxe@users.sf.net>

	* pl.po: Commited pl translation, contributed by Paweł Sakowski.
		 Thanks!
	* zmisc.c: Fixed button hor/vert aligning in toolbars when the
	orientation changes. Left the '<[Subpage]>' group always
	horizontal because it made more sense.

17.08.2001	many channels <garetxe@users.sf.net>

	* v4linterface: create submenus as needed when there are many
	channels, add inputs and standards to the context menu.

16.08.2001	fixes <garetxe@users.sf.net>

	* zvbi.c: Reduced the number of fetch_page calls. Better now?
	* vbi_fetch_vt_page: Added memset(pg, 0, sizeof(*pg)), otherwise
	segfault when drawing the page if pg is initially bogus data.
	* capture.c: Fixes, but mc still breaks the mpeg plugin. Spent the
	whole day tracking this down, nothing so far :-(

16.08.2001	Zapzilla gui <mschimek@users.sf.net>
	* ttxview.c: Removed export dir field, Zapzilla now
	  remembers the path last entered. z_build_path is
	  applied to the entered path, not exportdir. Made the
	  file entry "electric", ie. the proposed file name is
	  automagically appended.
	* search.c, ttxview.c: Added regular expression option.

16.08.2001	libvbi et al <mschimek@users.sf.net>

	* exp-html.c: Added color option, fixed anchor insertion.
	* ttxview.c: Didn't set vbi export from zconf, fixed.


15.08.2001	add all channels <garetxe@users.sf.net>

	* channel_editor: Added 'Add all channel' button.

15.08.2001	libvbi et al <mschimek@users.sf.net>

	* glade: Removed the gettextized "labelxx" and the like.
	* list.h: rem_node() returns NULL if node is not member of
	  the list. Fast removing w/o check under unlink_node().
	* fifo.c: rem_producer/consumer() safe to call after
	  adding failed. (More changes ahead.)
	* vbi.c: Restored test filter.
	* teletext.c: Fixed SWR p570 DRCS bug. Added enhancement
	  header-only shortcut as suggested by spec.
	* zvbi.c: Fixed off-by-one error (column 41) updating RTC